[gd_scene load_steps=5 format=3 uid="uid://dhut260kusnf3"]

[ext_resource type="Script" path="res://Person.gd" id="1_me7vl"]
[ext_resource type="Script" path="res://RigidBody2D.gd" id="2_5ja2q"]
[ext_resource type="Texture2D" uid="uid://t1mxp1c6t76y" path="res://materials/Player.png" id="3_eplv7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6mug8"]
size = Vector2(206, 201)

[node name="Person" type="Node2D"]
script = ExtResource("1_me7vl")
metadata/_edit_group_ = true

[node name="RigidBody2D" type="RigidBody2D" parent="."]
gravity_scale = 0.0
script = ExtResource("2_5ja2q")

[node name="Area2D" type="Area2D" parent="RigidBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2(2, 7)
shape = SubResource("RectangleShape2D_6mug8")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D"]
texture = ExtResource("3_eplv7")

[connection signal="body_entered" from="RigidBody2D" to="." method="_on_rigid_body_2d_body_entered"]
[connection signal="is_inside" from="RigidBody2D" to="." method="_on_rigid_body_2d_is_inside"]
[connection signal="area_entered" from="RigidBody2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="RigidBody2D/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_exited" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_area_exited"]
